k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: omnimfa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: omnimfa
spec:
  type: ClusterIP
  ports:
    - name: inside
      port: 9092
      targetPort: 9092
    - name: outside
      port: 9093
      targetPort: 9093
  selector:
    app: kafka
