k8s/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-depl
  namespace: omnimfa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-depl
  template:
    metadata:
      labels:
        app: zookeeper-depl
    spec:
      containers:
        - name: zookeeper-container
          image: wurstmeister/zookeeper
          ports:
            - containerPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-k8ssvc
  namespace: omnimfa
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper-depl
