k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omnimfa-ingress
  namespace: omnimfa
  annotations:
    cert-manager.io/cluster-issuer: omnimfa-issuer # ClusterIssuer-name
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "www.omnimfa.cloud"
      secretName: omnimfa-com-tls # Certificate-secretName
  rules:
    - host: www.omnimfa.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 80
